nouvelle génération du plateau de jeu

--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 
   <name>dndcopy</name>
   <!-- FIXME change it to the project's website -->
-  <url>http://www.example.com</url>
+  <url>https://www.example.com</url>
 
 
 
@@ -29,7 +29,7 @@
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>4.11</version>
+      <version>4.13.1</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
@@ -117,7 +117,20 @@
           <version>3.0.0</version>
           <configuration>
             <mainClass>dndcopy.fr.ecoleNum.dd.Main</mainClass>
+            <cleanupDaemonThreads>false</cleanupDaemonThreads>
           </configuration>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-javadoc-plugin</artifactId>
+          <executions>
+            <execution>
+              <id>attach-javadocs</id>
+              <goals>
+                <goal>jar</goal>
+              </goals>
+            </execution>
+          </executions>
         </plugin>
       </plugins>
     </pluginManagement>
